# wednesday-vpn

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  build.bat  build.rs  compose-dev.yml  config.sample.yaml  docker-compose.yml  telegram_bot.dockerfile  wireguard_control.dockerfile
migrations/: 20230201185609_init.down.sql  20230201185609_init.up.sql
proto/: wireguard_control.proto
src/: cfg.rs  control_client.rs  main.rs  rpc.rs  statistics.rs  statistics_collector.rs  storage.rs  wireguard_control.rs
src/handlers/: add_profile_dialogue.rs  admin.rs  mod.rs  user.rs
src/wireguard/: config.rs  keys.rs
