[package]
name = "wednesday-vpn"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "=1.0.68"
walkdir = "=2.3.2"
serde = { version = "=1.0.152", features = ["derive"] }
serde_json = "=1.0.91"
serde_repr = "=0.1.10"
tinytemplate = "=1.2.1"
clap = { version = "=4.1.1", features = ["derive"] }
mongodb = { version = "=2.3.1", default-features = false, features = ["tokio-runtime"] }
futures = "=0.3.25"
tokio = { version = "=1.24.2", features = ["full"]}
config = "=0.13.3"
bytes = "=1.3.0"
teloxide = { version = "=0.12.0", default-features = false, features = ["ctrlc_handler", "macros", "rustls"] }
tonic = { version = "=0.8.3", features = [] }
prost = "=0.11.6"
protobuf = "=3.2.0"
byte-unit = { version = "=4.0.18", default-features = false, features = ["std"] }
execute = "=0.2.11"
humantime = "=2.1.0"
url = "=2.3.1"
ipnet = "=2.7.1"
rand = "=0.8.5"
uuid = { version = "=1.2.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
tracing = "=0.1.37"
tracing-subscriber = "=0.3.16"

[build-dependencies]
tonic-build = "=0.8.4"

[[bin]]
name = "telegram_bot"
path = "src/main.rs"

[[bin]]
name = "wireguard_control"
path = "src/wireguard_control.rs"

[lib]
name = "dummy"
path = "src/lib.rs"
